--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
 		<p><a href="latihan4_2.html">Latihan 4</p>
 		<p><a href="latihan5_2.html">Latihan 5</p>
 		
+		<h2>Praktik SIGWEB Minggu-5</h2>
+		
+		<p><a href="latihan_m5.html">Latihan Leaflet JS</p>	
+		
 	</body>
 </html>
