--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<h2>Praktik SIGWEB Minggu-5</h2>
 		
 		<p><a href="latihan_m5.html">Latihan Leaflet JS</p>	
-	
+
+		<h2>Praktik SIGWEB Minggu-6</h2>
+		<p><a href="latihanM6.html">Latihan Pembuatan WebGIS</a></p>
 	</body>
 </html>
