--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		<p><a href="latihan1.html">Latihan 1</a></p>
 		<p><a href="latihan2.html">Latihan 2</a></p>
-		<p><a href="https://nisrinaazza03.wixsite.com/azzasalmaaa"></a>Latihan 3</p>
+		<p><a href="https://nisrinaazza03.wixsite.com/azzasalmaaa">Latihan 3</a></p>
 		
 		<h2>Praktik SIGWEB Minggu-3</h2>
 		
