menambahkan tugas minggu ke-4

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		<p><a href="latihan4_2.html">Latihan 4</a></p>
 		<p><a href="latihan5_2.html">Latihan 5</a></p>
 		
+		<h2>Praktik SIGWEB Minggu-4</h2>
+		
+		<p><a href="Latihan_M4.html">Simple CV using Bootstrap Template</a></p>
+		
 		<h2>Praktik SIGWEB Minggu-5</h2>
 		
 		<p><a href="latihan_m5.html">Latihan Leaflet JS</a></p>	
