--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
 		<h1>Nisrina Azza Salma [20/456164/TK/50294]</h1>
 		<h2>Praktik SIGWEB Minggu-2</h2>
 		
-		<p><a href="latihan1.html">Latihan 1</p>
-		<p><a href="latihan2.html">Latihan 2</p>
-		<p><a href="https://nisrinaazza03.wixsite.com/azzasalmaaa">Latihan 3</p>
+		<p><a href="latihan1.html">Latihan 1</a></p>
+		<p><a href="latihan2.html">Latihan 2</a></p>
+		<p><a href="https://nisrinaazza03.wixsite.com/azzasalmaaa">Latihan 3</a></p>
 		
 		<h2>Praktik SIGWEB Minggu-3</h2>
 		
-		<p><a href="latihan1_2.html">Latihan 1</p>
-		<p><a href="latihan2_2.html">Latihan 2</p>
-		<p><a href="latihan3_2.html">Latihan 3</p>
-		<p><a href="latihan4_2.html">Latihan 4</p>
-		<p><a href="latihan5_2.html">Latihan 5</p>
+		<p><a href="latihan1_2.html">Latihan 1</a></p>
+		<p><a href="latihan2_2.html">Latihan 2</a></p>
+		<p><a href="latihan3_2.html">Latihan 3</a></p>
+		<p><a href="latihan4_2.html">Latihan 4</a></p>
+		<p><a href="latihan5_2.html">Latihan 5</a></p>
 		
+		<h2>Praktik SIGWEB Minggu-4</h2>
+		
+		<p><a href="Latihan_M4.html">Simple CV using Bootstrap Template</a></p>
+		
+		<h2>Praktik SIGWEB Minggu-5</h2>
+		
+		<p><a href="latihan_m5.html">Latihan Leaflet JS</a></p>	
+
+		<h2>Praktik SIGWEB Minggu-6</h2>
+		<p><a href="latihanM6.html">Latihan Pembuatan WebGIS</a></p>
 	</body>
 </html>
