--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
 
 		<h2>Praktik SIGWEB Minggu-6</h2>
 		<p><a href="latihanM6.html">Latihan Pembuatan WebGIS</a></p>
+
+		<h2>Ujian Tengah Semester</h2>
+		<p><a href="UTS_456164.html"></a></p>
 	</body>
 </html>
