menambahkan file uts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 		<p><a href="latihanM6.html">Latihan Pembuatan WebGIS</a></p>
 
 		<h2>Ujian Tengah Semester</h2>
-		<p><a href="UTS_456164.html"></a>Ujian Tengah Semester</p>
+		<p><a href="UTS_456164.html">Ujian Tengah Semester</a></p>
 	</body>
 </html>
